--- a/Style/Style.css
+++ b/Style/Style.css
@@ -1,4 +1,23 @@
 
+*{
+    margin: 0;
+    padding: 0;
+}
+.main{
+    display: flex;
+}
+.headMenu{
+    width: 70%;
+    height: 90vh;
+    padding: 15px;
+}
+.sideMenu{
+    width: 30%;
+    height: 90vh;
+    padding: 15px;
+    background-color: #212121;
+
+}
 nav{
     margin-left: 10%;
     margin-top: 10px;
@@ -32,19 +51,18 @@ nav ul li a{
 }
 
 .icon{
-    margin-top: 20px;
+    margin-top: 10px;
     display: flex;
-    gap: 30px;
+    gap: 25px;
+    margin-left: 30%;
+    color: #fff;
 }
 
-.home{
-    display: flex;
-}
 .title{
     width: 65%;
     position: relative;
-    left: 13%;
-    margin-top: 20px;
+    left: 15%;
+    margin-top: 10%;
     display: flex;
 }
 .title p{
@@ -57,19 +75,30 @@ text-align: left;
 color: #212121;
 
 }
-.right-titles{
-    position: relative;
-    left: 30px;
-    top: 30%;
+.left-title{
+        width: 70%;
 }
-.eclipse-img{
-    width: 100px;
+.right-title{
+    width: 30%;
     position: relative;
-    bottom: 20%;
+    left: 30%;
+    bottom: 20px;
+}
+.img-position{
+    position: relative;
+    top: 20%;
+    display: flex;
+    gap: 10px;
 }
 .big-img{
-    width: 300px;
+    position: relative;
+    bottom: 40px;
 }
+.eclipse-img{
+    position: relative;
+    top: 30px;
+}
+
 .title h1{
     font-family: 'Roboto', sans-serif;
     font-size: 50px;
@@ -94,10 +123,6 @@ color: #212121;
     border:none;
 }
 .fa-arrow-right{
-    margin-left: 10px;
+
 }
 
-.left-title{
-    background-color: #212121;
-    width: 35%;
-}
